[gd_scene load_steps=9 format=3 uid="uid://doo1q33nkoo41"]

[ext_resource type="FontFile" uid="uid://bbupu8jfhkfn2" path="res://fonts/Xolonium-Regular.ttf" id="1_6q6u6"]
[ext_resource type="Script" path="res://hud.gd" id="1_jmgxi"]
[ext_resource type="Script" path="res://h_box_container.gd" id="3_ltx7u"]
[ext_resource type="Texture2D" uid="uid://n3x0hguwe3w7" path="res://art/hud_heartFull.png" id="4_pfivq"]

[sub_resource type="LabelSettings" id="LabelSettings_unbrp"]
line_spacing = 10.0
font_size = 66
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3y5j2"]
font = ExtResource("1_6q6u6")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="InputEventAction" id="InputEventAction_erigp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_qb84f"]
events = [SubResource("InputEventAction_erigp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jmgxi")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6q6u6")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -104.0
offset_right = 216.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6q6u6")
theme_override_font_sizes/font_size = 64
text = "Dodge the 
creeps!"
label_settings = SubResource("LabelSettings_unbrp")
horizontal_alignment = 1
autowrap_mode = 3

[node name="highScore" type="Label" parent="."]
offset_top = 136.0
offset_right = 488.0
offset_bottom = 232.0
label_settings = SubResource("LabelSettings_3y5j2")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -86.0
offset_right = 88.5
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_6q6u6")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_qb84f")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="hearts" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.133
anchor_right = 0.167
anchor_bottom = 0.133
offset_left = -80.16
offset_top = -31.76
offset_right = 111.84
offset_bottom = 32.24
theme_override_constants/separation = 5
script = ExtResource("3_ltx7u")

[node name="H1" type="TextureRect" parent="hearts"]
layout_mode = 2
texture = ExtResource("4_pfivq")
stretch_mode = 2

[node name="H2" type="TextureRect" parent="hearts"]
layout_mode = 2
texture = ExtResource("4_pfivq")
stretch_mode = 2

[node name="H3" type="TextureRect" parent="hearts"]
layout_mode = 2
texture = ExtResource("4_pfivq")
stretch_mode = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
